--- a/class06/homeworkClass06/ToDo/appsettings.json
+++ b/class06/homeworkClass06/ToDo/appsettings.json
@@ -2,11 +2,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
-
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PizzaDbConnection": "server = (localdb)\\MSSQLlocalDB; database=PizzaDB"
+    "TaskDbConnection": "server = (localdb)\\MSSQLlocalDB; database=TaskDB"
   }
 }
